Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Site Exemplo</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- Cabeçalho -->
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
